# facet-serialize

./: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-deserialize/: CHANGELOG.md  Cargo.toml  README.md
facet-deserialize/src/: error.rs  lib.rs  span.rs
facet-serialize/: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  spanned.rs
