[package]
name = "facet-serialize"
version = "0.31.2"
edition = "2024"
rust-version = "1.87.0"
license = "MIT or Apache-2.0"
repository = "https://github.com/facet-rs/facet-serialize"
description = "Generic serializer for facet"
keywords = ["facet", "serialization", "reflection"]
categories = ["encoding", "development-tools"]

[features]
default = ["std"]
std = ["alloc"]
alloc = ["facet-core/alloc", "facet-reflect/alloc"]

[dependencies]
facet-core = { version = "0.31.7", default-features = false }
facet-reflect = { version = "0.31.7", default-features = false }
log = "0.4.27"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "user-hooks",
] }
facet = { version = "0.31.7" }
facet-testhelpers = { version = "0.31.7" }
insta = "1.43.1"
