[package]
name = "facet-serialize"
version = "0.28.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic serializer for facet"
keywords = ["facet", "serialization", "deserialization"]
categories = ["encoding", "development-tools"]

[features]
default = ["std"]
std = ["alloc"]
alloc = ["facet-core/alloc", "facet-reflect/alloc"]

[dependencies]
facet-core = { version = "0.28.0", default-features = false }
facet-reflect = { version = "0.28.0", default-features = false }
log = "0.4.27"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
facet = { version = "0.28.0" }
facet-testhelpers = { version = "0.28.0" }
insta = "1.43.1"
